--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,106 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* Color palette:
+#e7e6e1
+#f7f6e7
+#f2a154
+#314e52 
+*/
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: 1.5;
+  font-size: 0.875rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1.25;
+  margin-bottom: 0.75;
+}
+
+.route {
+  background-color: #e7e6e1;
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+  margin: 1rem auto;
+  padding: 1rem 2rem;
+  align-items: center;
+  border-radius: 6px;
+}
+
+.add-form-modal {
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  background: #f7f6e7;
+  display: inline-block;
+  padding: 0.25rem 1rem;
+  border-radius: 5px;
+}
+
+.add-form-modal p {
+  margin-bottom: 0;
+  color: #f2a154;
+}
+
+.add-route-form {
+  position: relative;
+  background-color: #e7e6e1;
+  max-width: 80%;
+  margin: 0 auto;
+  margin-bottom: 4rem;
+  padding-top: 2rem;
+  padding: 1rem 2rem;
+  border-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-route-form input,
+.route-difficulty {
+  background-color: #f7f6e7;
+  border-color: transparent;
+  border-radius: 6px;
+  padding: 0.25rem 0.5rem;
+  width: 100%;
+}
+
+.add-route-form-control {
+  margin: 0.5rem 0;
+  display: grid;
+  grid-template-columns: 100px 1fr;
+  align-items: center;
+}
+
+.add-route-form button,
+.add-route-remove-btn,
+.difficulty-btn,
+.trip-container-button {
+  display: inline-block;
+  background-color: #314e52;
+  color: white;
+  border-color: transparent;
+  margin-top: 1rem;
+  padding: 0.15rem 0.25rem;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.add-route-input-div {
+  width: 80%;
+}
+
+.routes-header {
+  text-align: center;
+}
+
+.trip-container {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
